--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/abstract.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/abstract.tex
@@ -3,7 +3,7 @@
 
 \begin{frame}{提案の概要}
     \begin{itemize}
-        \item 本論文では, ROS 2のスケジューリングモデルと応答時間分析を提案する
+        \item ROS 2のスケジューリングモデルと応答時間分析を提案する
         \item 本論文の目的は以下 3 つ
         \begin{enumerate}
             \item アプリケーションの最悪応答時間を制限する実用的な分析をロボットエンジニアに提供する
