--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/introduction.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/introduction.tex
@@ -3,13 +3,13 @@
 \section{INTRODUCTION}
 \label{sec: introduction}
 
-\begin{frame}{背景}
-    \begin{itemize}
-        \item Linux のようなオペレーティングシステムのスケジューリングモデルは広範囲に研究されているが, これは ROS には当てはまらない
-        \item ROS は, カスタムスケジューリングポリシーを使用して, 独立したメッセージハンドラーを共有スレッドに多重化する
-        \item その結果, ROS 上で実行されるアプリケーションは, プラットフォームとなるオペレーティングシステムとミドルウェアレイヤのスケジューリング決定の影響を受け, 複雑で相互に依存するタイミングの影響を受ける
-    \end{itemize}
-\end{frame}
+% \begin{frame}{背景}
+%     \begin{itemize}
+%         \item Linux のようなオペレーティングシステムのスケジューリングモデルは広範囲に研究されているが, これは ROS には当てはまらない
+%         \item ROS は, カスタムスケジューリングポリシーを使用して, 独立したメッセージハンドラーを共有スレッドに多重化する
+%         \item その結果, ROS 上で実行されるアプリケーションは, プラットフォームとなるオペレーティングシステムとミドルウェアレイヤのスケジューリング決定の影響を受け, 複雑で相互に依存するタイミングの影響を受ける
+%     \end{itemize}
+% \end{frame}
 
 \begin{frame}{本論文の貢献}
     \begin{itemize}
