--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/limitations_extensions_and_conclusions.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/limitations_extensions_and_conclusions.tex
@@ -1,6 +1,6 @@
 % !TeX root = main.tex
 
-\section{Limitations, Extensions, and Conclusions}
+\section{LIMITATIONS, EXTENSIONS, AND CONCLUSIONS}
 \label{sec: limitations, extensions, and conclusions}
 
 \begin{frame}{セクションサマリ}
