--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
@@ -25,7 +25,7 @@
 
 \maketitle
 
-% \summary{1}{0}
+\summary{1}{0}
 \input{abstract.tex}
 
 \begin{frame}{Outline}
@@ -33,14 +33,14 @@
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
-% \input{prior_knowledge.tex}
-% \input{introduction.tex}
-% \input{background.tex}
+\input{prior_knowledge.tex}
+\input{introduction.tex}
+\input{background.tex}
 \input{system_model.tex}
 \input{response_time_analysis_for_processing_chains.tex}
-% \input{case_study.tex}
-% \input{related_work.tex}
-% \input{limitations_extensions_and_conclusions.tex}
+\input{case_study.tex}
+\input{related_work.tex}
+\input{limitations_extensions_and_conclusions.tex}
 
 \lastpage
 
