--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/prior_knowledge.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/prior_knowledge.tex
@@ -5,7 +5,6 @@
 
 \begin{frame}{前提知識}
     \begin{itemize}
-        \item \ourl{リアルタイム性}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683668573}
         \item \ourl{エンドツーエンドレイテンシ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2684616950}
         \item \ourl{SCHED\_DEADLINE}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2692645566/SCHED_DEADLINE}
         \item \ourl{ROS}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603071}
@@ -13,5 +12,6 @@
         \item \ourl{publish/subscribeモデル}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2675048610}
         \item \ourl{コールバック}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603231}
         \item \ourl{エグゼキュータ固有のスケジューリング動作}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2698314224}
+        \item \ourl{最大イベント到着曲線}{https://drive.google.com/file/d/1n85X0vDrDm4IDANDP4aUoC0SNnZLAiRN/view?usp=share_link}
     \end{itemize}
 \end{frame}
