--- a/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/main.tex
+++ b/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/main.tex
@@ -33,12 +33,12 @@
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
-% \input{prior_knowledge.tex}
-% \input{introduction.tex}
-% \input{system_model_and_problem_statement.tex}
-% \input{the_proposed_schedulers.tex}
-% \input{performance_evaluation.tex}
-% \input{conclusion.tex}
+\input{prior_knowledge.tex}
+\input{introduction.tex}
+\input{system_model_and_problem_statement.tex}
+\input{the_proposed_schedulers.tex}
+\input{performance_evaluation.tex}
+\input{conclusion.tex}
 
 \lastpage
 
