--- a/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/performance_evaluation.tex
+++ b/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/performance_evaluation.tex
@@ -68,14 +68,14 @@
 
 \begin{frame}{HMDSとHMDS-Blの比較指標}
     \begin{block}{Average Improvement in Schedule length ratios (AIS)}
-        \begin{equation}
+        \begin{equation*}
             A I S=\frac{S L R_{H M D S-B l}-S L R_{H M D S}}{S L R_{H M D S}} \times 100
-        \end{equation}
+        \end{equation*}
     \end{block}
     \begin{block}{Average Slow Down (ASD)}
-        \begin{equation}
+        \begin{equation*}
             A S D=\frac{\text { run-time }_{H M D S}}{\text { run-time }_{H M D S-B l}}
-        \end{equation}
+        \end{equation*}
     \end{block}
 \end{frame}
 
