--- a/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/proposed_analysis.tex
+++ b/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/proposed_analysis.tex
@@ -120,9 +120,9 @@
 % \begin{frame}{縮小化演算子}
 %     \begin{definition}[縮小化]
 %         確率変数 $X$ に対して, $X$ を $d$ の整数で縮小して得られる変数 $Y$ を $X \ominus d$ と呼び, 以下の関数で定義する
-%         \begin{equation}
+%         \begin{equation*}
 %             \mathbf{P}(Y=t)= \begin{cases}0 & \text { if } t<0 \\ \sum_{s=-\infty}^{s=d} \mathbf{P}(X=s) & \text { if } t=0 \\ \mathbf{P}(X=t+d) & \text { if } t>0\end{cases}
-%         \end{equation}
+%         \end{equation*}
 %     \end{definition}
 % \end{frame}
 
