--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
@@ -17,16 +17,13 @@
     \end{block}
 \end{frame}
 
-% \begin{frame}{リソースの予約に関する仮定}
-%     \begin{itemize}
-%         \item 本論文では, 予約サーバーが周期的リソースモデル~\cite{shin2003periodic}に準拠している, すなわち, 以下を仮定する
-%               \begin{enumerate}
-%                   \item 各予約には暗黙的デッドラインがある
-%                   \item 予約サーバ $r_i$がワークロードを持つときはいつでも, 予約アルゴリズムが$P_i$時間単位ごとに少なくとも$Q_i$単位のサービスを保証する
-%                   \item バジェット枯渇と他の予約のレイテンシによる, ある予約で実行中のプロセスが受ける有限の最大リリースレイテンシが存在する
-%               \end{enumerate}
-%     \end{itemize}
-% \end{frame}
+\begin{frame}{リソースの予約に関する仮定}
+    本論文では, 予約サーバーが周期的リソースモデル~\cite{shin2003periodic}に準拠している, すなわち, 以下を仮定する
+    \begin{enumerate}
+        \item 各予約には暗黙的デッドラインがある
+        \item 予約サーバ $r_i$がワークロードを持つときはいつでも, 予約アルゴリズムが$P_i$時間単位ごとに少なくとも$Q_i$単位のサービスを保証する
+    \end{enumerate}
+\end{frame}
 
 
 \forme{
