--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/main.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/main.tex
@@ -30,7 +30,7 @@
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
-    \small\tableofcontents[hideallsubsections]
+    \tiny\tableofcontents[hideallsubsections]
 \end{frame}
 
 \input{prior_knowledge.tex}
