--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/prior_knowledge.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/prior_knowledge.tex
@@ -7,6 +7,6 @@
     \begin{itemize}
         \item \ourl{マルチコアプラットフォームの分類}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2721220872}
         \item \ourl{デッドラインモデルの分類}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2721611859}
-        \item \ourl{フェデレートスケジューリング}{todo}
+        \item \ourl{フェデレートスケジューリング}{https://drive.google.com/file/d/1DsuxdE0okuzZmk0lkOpVEWtfUhXl9OdV/view?usp=share_link}
     \end{itemize}
 \end{frame}
